<resources>
    <string name="app_name">Todo</string>
    <string name="done_tasks">Delete all tasks</string>
    <string name="settings">Settings</string>
    <string name="new_todo_add_title">Добавление новой заметки</string>
    <string name="todo_title_hint">Заголовок заметки</string>
    <string name="todo_text_hint">Текст заметки</string>
    <string name="add_todo_title">Создать</string>
    <string name="add_todo_cancel">Отмена</string>
    <string name="test_title">Test title</string>
    <string name="lorem_ipsum_dolor_sit_amet_contestar">Lorem ipsum dolor sit amet contestar</string>
    <string name="user_empty_list_message">Please add your first Todo</string>
    <string name="test_alarm_time">10.03.2018 10:55</string>
    <string name="alarm_date">Дата</string>
    <string name="alarm_time">Время</string>
    <string name="low_priority">Низкий приоритет</string>
    <string name="high_priority">Высокий приоритет</string>
    <string name="menu_delete_current_todo_title">Удалить заметку</string>
    <string name="sign_out">Sign out</string>
    <string name="other">Additional</string>
    <string name="remove_btn">Удалить</string>

    <string name="attach_dialog_title">Выберите источник</string>
    <string-array name="attach_variants">
        <item>Выбрать из галереи</item>
        <item>Сделать снимок с камеры</item>
    </string-array>
</resources>
